--- a/DiscordAudioStreamer/DiscordAudioStreamer.csproj
+++ b/DiscordAudioStreamer/DiscordAudioStreamer.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSCore" Version="1.2.1.2" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
+    <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="OpusDotNet.opus.win-x64" Version="1.3.1" />
     <PackageReference Include="Sodium.Core" Version="1.2.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
