Added soundboard UI that directly supplies the audio stream without using WASAPI loopback capture.

--- a/DiscordAudioStreamer/App.config
+++ b/DiscordAudioStreamer/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="token" value=""/>
+    <add key="layoutFile" value=""/>
   </appSettings>
 </configuration>
