Added HTTP server to the app that allows remote control. The app can also act as an HTTP client.

--- a/DiscordAudioStreamer/App.config
+++ b/DiscordAudioStreamer/App.config
@@ -3,5 +3,6 @@
   <appSettings>
     <add key="token" value=""/>
     <add key="layoutFile" value=""/>
+    <add key="remote" value="http://localhost:4333/"/>
   </appSettings>
 </configuration>
