--- a/DiscordAudioStreamer/DiscordAudioStreamer.csproj
+++ b/DiscordAudioStreamer/DiscordAudioStreamer.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0-windows7.0</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
@@ -13,6 +13,10 @@
     <PackageReference Include="OpusDotNet.opus.win-x64" Version="1.3.1" />
     <PackageReference Include="Sodium.Core" Version="1.2.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DiscordBot\DiscordBot.csproj" />
   </ItemGroup>
 
 </Project>
