--- a/DiscordAudioStreamer/DiscordAudioStreamer.csproj
+++ b/DiscordAudioStreamer/DiscordAudioStreamer.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DiscordAudioStreamer.Engine\DiscordAudioStreamer.Engine.csproj" />
+    <ProjectReference Include="..\DiscordAudioStreamer.Model\DiscordAudioStreamer.Model.csproj" />
     <ProjectReference Include="..\DiscordBot\DiscordBot.csproj" />
   </ItemGroup>
 
