--- a/DiscordAudioStreamer/DiscordAudioStreamer.csproj
+++ b/DiscordAudioStreamer/DiscordAudioStreamer.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DiscordAudioStreamer.Api\DiscordAudioStreamer.Api.csproj" />
     <ProjectReference Include="..\DiscordAudioStreamer.Engine\DiscordAudioStreamer.Engine.csproj" />
+    <ProjectReference Include="..\DiscordAudioStreamer.Http\DiscordAudioStreamer.Http.csproj" />
     <ProjectReference Include="..\DiscordAudioStreamer.Model\DiscordAudioStreamer.Model.csproj" />
     <ProjectReference Include="..\DiscordBot\DiscordBot.csproj" />
   </ItemGroup>
